--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.0.1
-SQLAlchemy==1.4.4
-requests==2.25.1
+SQLAlchemy==1.4.25
+requests==2.26.0
 gunicorn==20.1.0
 python-dotenv==1.0.0
 psycopg2==2.9.5
+pytz==2021.1
